force-app/main/default/objects/Wizard_Step__mdt/Wizard_Step__mdt.object-meta.xml
<CustomObject>
    <label>Wizard Step</label>
    <pluralLabel>Wizard Steps</pluralLabel>
</CustomObject>