force-app/main/default/objects/Wizard_Step__mdt/fields/ComponentBundle__c.field-meta.xml
<CustomField>
    <fullName>ComponentBundle__c</fullName>
    <label>Component Bundle</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>