force-app/main/default/objects/Wizard_Step__mdt/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>