force-app/main/default/objects/Wizard_Step__mdt/fields/Skippable__c.field-meta.xml
<CustomField>
    <fullName>Skippable__c</fullName>
    <label>Skippable</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>