force-app/main/default/objects/Wizard_Step__mdt/fields/StepLabel__c.field-meta.xml
<CustomField>
    <fullName>StepLabel__c</fullName>
    <label>Step Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>