force-app/main/default/objects/Wizard_Step__mdt/fields/ValidatorClasses__c.field-meta.xml
<CustomField>
    <fullName>ValidatorClasses__c</fullName>
    <label>Validator Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>