force-app/main/default/objects/Wizard_Step__mdt/fields/WizardApiName__c.field-meta.xml
<CustomField>
    <fullName>WizardApiName__c</fullName>
    <label>Wizard API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>